--- a/index.html
+++ b/index.html
@@ -8,37 +8,47 @@
 </head>
 <body>
   <div class="container">
-    <h1>Contact Me</h1>
-    <p>Feel free to reach out via the following platforms:</p>
+    <header>
+      <h1>Let's Connect</h1>
+      <p>Hi it's me again:</p>
+    </header>
 
     <!-- Contact Links -->
     <div class="contact-links">
-      <a href="https://t.me/s2a22" target="_blank" id="telegram-link" class="contact-btn">
+      <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Telegram_2019_Logo.svg" alt="Telegram Logo" class="icon">
-        Telegram
+        <span>Telegram</span>
       </a>
-      <a href="https://www.instagram.com/s2a2222/" target="_blank" id="instagram-link" class="contact-btn">
+      <a href="https://www.instagram.com/s2a2222/" target="_blank" class="contact-btn instagram">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram Logo" class="icon">
-        Instagram
+        <span>Instagram</span>
       </a>
     </div>
 
-    <!-- Optional: Add a form for direct contact -->
-    <h2>Or Send Me a Message</h2>
-    <form id="contact-form">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
+    <!-- Contact Form -->
+    <section class="form-section">
+      <h2>Or Send Me a Message</h2>
+      <form id="contact-form">
+        <div class="input-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+        <div class="input-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="input-group">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+        </div>
+        <button type="submit" class="submit-btn">Send</button>
+      </form>
+      <p id="form-message"></p>
+    </section>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required></textarea>
-
-      <button type="submit">Send</button>
-    </form>
-
-    <p id="form-message"></p>
+    <footer>
+      <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </footer>
   </div>
 
   <script src="script.js"></script>
