--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <h1>Let's Connect</h1>
-      <p>Hi it's me again:</p>
+      <p>Hi it's me again</p>
     </header>
 
     <!-- Contact Links -->
@@ -28,7 +28,7 @@
     <!-- Contact Form -->
     <section class="form-section">
       <h2>Or Send Me a Message</h2>
-      <form id="contact-form">
+      <form id="contact-form" action="https://formspree.io/f/your-formspree-endpoint" method="POST">
         <div class="input-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2023 Your Name. All rights reserved.</p>
+      <p>&copy; 2025 Abdul Moein [shaheen]. All rights reserved.</p>
     </footer>
   </div>
 
