--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Contact Form -->
     <section class="form-section">
       <h2>Or Send Me a Message</h2>
-      <form id="contact-form" action="https://formspree.io/f/your-formspree-endpoint" method="POST">
+      <form id="contact-form" action="https://formspree.io/f/xangrwzy" method="POST">
         <div class="input-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
