--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Contact Form -->
     <section class="form-section">
       <h2>Or Send Me a Message</h2>
-      <form id="contact-form" action="https://formspree.io/f/your-endpoint" method="POST">
+      <form id="contact-form" action="https://formspree.io/f/xanqrwzy" method="POST">
         <div class="input-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2023 Your Name. All rights reserved.</p>
+      <p>&copy; 2023 Abdul Moein [shaheen]. All rights reserved.</p>
     </footer>
   </div>
 
