--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span>لنتواصل</span>
         <span class="animated-subtitle">معًا</span>
       </h1>
-      <p class="header-description">تواصل معي عبر المنصات التالية متواجده حاليا:</p>
+      <p class="header-description">تواصل معي عبر المنصات التالية المتواجده حاليا:</p>
     </header>
 
     <!-- روابط التواصل -->
@@ -60,7 +60,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 s2a22 جميع الحقوق محفوظة.</p>
+      <p>&copy; 2025 @s2a22 جميع الحقوق محفوظة.</p>
     </footer>
   </div>
 
