--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- شريط التنقل -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="#" class="brand">موقعي</a>
+      <a href="#" class="brand">شاهين</a>
       <ul class="nav-links">
         <li><a href="#home">الرئيسية</a></li>
         <li><a href="#about">حول الموقع</a></li>
@@ -81,7 +81,7 @@
     </section>
 
     <footer>
-      <p>&copy; @s2a22 جميع الحقوق محفوظة.</p>
+      <p>&copy; @s2a22 All rights reserved </p>
     </footer>
   </div>
 
