--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
-  <!-- الخلفيات المدمجة -->
+  <!-- الخلفيات -->
   <div class="animated-background"></div>
   <div id="particles-js"></div>
-  
+
   <!-- شريط التنقل -->
   <nav class="navbar">
     <div class="nav-container">
       <a href="#" class="brand">شاهين</a>
       <ul class="nav-links">
-        <li><a href="#home">الرئيسية</a></li>
+        <!-- تم حذف قسم "الرئيسية" من القائمة -->
         <li><a href="#about">حول الموقع</a></li>
         <li><a href="#contact">اتصل بنا</a></li>
       </ul>
@@ -28,21 +28,22 @@
       </button>
     </div>
   </nav>
-  
-  <!-- المحتوى الرئيسي -->
-  <div class="container" id="home">
+
+  <!-- المحتوى -->
+  <div class="container">
     <header>
       <h1 class="animated-title">
         <span>لنتواصل</span>
         <span class="animated-subtitle">معًا</span>
       </h1>
-      <p class="header-description">تواصل معي عبر المنصات التالية المتواجده حاليا:</p>
+      <!-- نص متغير يظهر عبارات مختلفة كل فترة لجذب الانتباه (ميزة جديدة) -->
+      <p class="header-description" id="dynamic-text">تواصل معي عبر المنصات التالية متواجده حاليا:</p>
     </header>
 
     <!-- قسم حول الموقع -->
     <section id="about" class="about-section">
       <h2>حول الموقع</h2>
-      <p>هذا الموقع يهدف إلى تسهيل التواصل بين الزوار ومالك الموقع. هنا يمكنك إرسال رسالة أو التواصل عبر الروابط المتوفرة.</p>
+      <p>هذا الموقع يوفر لك وسيلة سريعة للتواصل عبر البريد أو منصات التواصل.</p>
     </section>
 
     <!-- روابط التواصل -->
@@ -73,29 +74,17 @@
           <textarea id="message" name="message" required class="animated-input" placeholder="رسالتك ..."></textarea>
           <i class="fas fa-comment-dots input-icon"></i>
         </div>
-        <button type="submit" class="submit-btn">
-          <i class="fas fa-paper-plane"></i>
-          إرسال الرسالة
-        </button>
+        <!-- تم إضافة تأثير حركة عند النقر على زر الإرسال -->
+        <button type="submit" class="submit-btn">إرسال الرسالة</button>
       </form>
     </section>
 
     <footer>
-      <p>&copy; @s2a22 All rights reserved </p>
+      <p>&copy; s2a22 جميع الحقوق محفوظة</p>
     </footer>
   </div>
 
-  <!-- زر العودة للأعلى -->
-  <button id="back-to-top" title="العودة للأعلى"><i class="fas fa-arrow-up"></i></button>
-
-  <!-- نافذة منبثقة لتأكيد إرسال الرسالة -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span id="modal-close" class="modal-close">&times;</span>
-      <p id="modal-message">تم إرسال الرسالة بنجاح!</p>
-    </div>
-  </div>
-
+  <!-- سكربت particles -->
   <script src="script.js"></script>
   <script>
     particlesJS.load('particles-js', 'particles.json', function() {
@@ -103,4 +92,5 @@
     });
   </script>
 </body>
-</html>
+            </html>
+            
