--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- قسم حول الموقع -->
     <section id="about" class="about-section">
       <h2>حول الموقع</h2>
-      <p>هذا الموقع يوفر لك وسيلة سريعة للتواصل عبر البريد أو منصات التواصل.</p>
+      <p>هذا الموقع يوفر لك وسيلة سريعة للتواصل معي .</p>
     </section>
 
     <!-- روابط التواصل -->
