--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To contact me</title>
+  <title>تواصل معنا</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -31,14 +31,16 @@
         <span>لنتواصل</span>
         <span class="animated-subtitle">معًا</span>
       </h1>
-      <p class="header-description" id="dynamic-text">تواصل معي عبر المنصات التالية متواجده حاليا:</p>
+      <p class="header-description" id="dynamic-text">تواصل معي عبر المنصات التالية:</p>
     </header>
 
+    <!-- قسم حول الموقع -->
     <section id="about" class="about-section">
       <h2>حول الموقع</h2>
       <p>هذا الموقع يوفر لك وسيلة سريعة للتواصل معي .</p>
     </section>
 
+    <!-- روابط التواصل -->
     <div class="contact-links">
       <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram">
         <i class="fab fa-telegram-plane"></i>
@@ -50,6 +52,7 @@
       </a>
     </div>
 
+    <!-- نموذج الاتصال -->
     <section class="form-section" id="contact">
       <h2>أو أرسل رسالة</h2>
       <form id="contact-form" action="https://formspree.io/f/xanqrwzy" method="POST">
