--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
       <button type="submit" class="submit-btn">إرسال الرسالة</button>
     </form>
+    <div id="response-message"></div>
   </section>
 
   <footer>
