--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 جميع الحقوق محفوظة</p>
+    <p>&copy; s2a22 جميع الحقوق محفوظة</p>
   </footer>
 
   <script src="script.js"></script>
