--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header>
     <h1>تواصل معي</h1>
-    <p>يسعدني تواصلك عبر الوسائل التالية أو إرسال رسالة عبر النموذج:</p>
+    <p>أنا هنا للرد على استفساراتك! تواصل معي عبر الوسائل التالية أو عبر النموذج.</p>
   </header>
 
   <section class="contact-links">
@@ -42,7 +42,7 @@
   </section>
 
   <footer>
-    <p>&copy; s2a22 جميع الحقوق محفوظة</p>
+    <p>&copy; 2025 جميع الحقوق محفوظة</p>
   </footer>
 
   <script src="script.js"></script>
