--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <div id="response-message"></div>
   </section>
 
+  <!-- Back-to-Top Button -->
+  <button id="back-to-top" class="back-to-top">↑</button>
+
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 جميع الحقوق محفوظة</p>
