--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Form Section -->
   <section class="form-section">
     <h2>أرسل رسالة</h2>
-    <form id="contact-form" action="https://formspree.io/f/xanqrwzy" method="POST">
+    <form id="contact-form" action="https://formspree.io/f/xjkgnkdy" method="POST">
       <div class="input-group">
         <input type="text" id="name" name="name" required placeholder="اسمك الكريم">
       </div>
