--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
   <!-- الجسيمات المتحركة -->
   <div id="particles-js"></div>
 
-  <!-- الشريط العلوي -->
-  <nav class="navbar">
-    <div class="brand">مرحبا بك! 👋</div>
-  </nav>
-
   <!-- المحتوى الرئيسي -->
   <main class="container">
     <header class="hero">
@@ -41,7 +36,7 @@
 
     <!-- نموذج الاتصال -->
     <section class="contact-form-section">
-      <form id="contactForm" action="https://formspree.io/f/xjkgnkdy" method="POST">
+      <form id="contactForm">
         <div class="form-group">
           <input type="text" id="fullName" name="name" required>
           <label for="fullName">الاسم الكامل</label>
