--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="nav-container">
       <a href="#home" class="brand">شاهين</a>
       <ul class="nav-links">
+        <li><a href="#courses">كورسات</a></li>
         <li><a href="#contact">اتصل بنا</a></li>
         <li><a href="#about">حول الموقع</a></li>
       </ul>
@@ -30,8 +31,17 @@
     <p>أنا هنا للرد على استفساراتك! تواصل معي عبر الوسائل التالية أو عبر النموذج.</p>
   </header>
 
+  <!-- New "Courses" Section -->
+  <section id="courses" class="courses-section">
+    <h2>كورسات</h2>
+    <p>قريباً! سيتم إضافة الكورسات هنا.</p>
+  </section>
+
   <!-- Contact Links Section -->
-  <section class="contact-links">
+  <section class="contact-links" id="contact">
+    <a href="tel:0945251594" class="contact-btn telegram" data-tooltip="اتصل بي الآن">
+      <i class="fas fa-phone-alt icon"></i> اتصل بي
+    </a>
     <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram" data-tooltip="تواصل عبر تيليجرام">
       <i class="fab fa-telegram-plane icon"></i> تيليجرام
     </a>
@@ -40,7 +50,7 @@
     </a>
   </section>
 
-  <!-- New Section for User Interaction -->
+  <!-- Feedback Section -->
   <section class="feedback-section">
     <h2>أرسل ملاحظاتك</h2>
     <form id="feedback-form" action="https://formspree.io/f/xanqrwzy" method="POST">
