--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="nav-container">
       <a href="#home" class="brand">شاهين</a>
       <ul class="nav-links">
-        <li><a href="#courses">كورسات</a></li>
-        <li><a href="#contact">اتصل بنا</a></li>
+        <li><a href="tel:0945251594">اتصل بنا</a></li> <!-- زر الاتصال المباشر -->
+        <li><a href="courses.html">كورسات</a></li> <!-- زر الكورسات -->
         <li><a href="#about">حول الموقع</a></li>
       </ul>
     </div>
@@ -31,40 +31,14 @@
     <p>أنا هنا للرد على استفساراتك! تواصل معي عبر الوسائل التالية أو عبر النموذج.</p>
   </header>
 
-  <!-- New "Courses" Section -->
-  <section id="courses" class="courses-section">
-    <h2>كورسات</h2>
-    <p>قريباً! سيتم إضافة الكورسات هنا.</p>
-  </section>
-
-  <!-- Contact Links Section -->
-  <section class="contact-links" id="contact">
-    <a href="tel:0945251594" class="contact-btn telegram" data-tooltip="اتصل بي الآن">
-      <i class="fas fa-phone-alt icon"></i> اتصل بي
-    </a>
+  <!-- Contact Links -->
+  <section class="contact-links">
     <a href="https://t.me/s2a22" target="_blank" class="contact-btn telegram" data-tooltip="تواصل عبر تيليجرام">
       <i class="fab fa-telegram-plane icon"></i> تيليجرام
     </a>
     <a href="https://www.instagram.com/s2a2222/" target="_blank" class="contact-btn instagram" data-tooltip="تواصل عبر إنستجرام">
       <i class="fab fa-instagram icon"></i> إنستجرام
     </a>
-  </section>
-
-  <!-- Feedback Section -->
-  <section class="feedback-section">
-    <h2>أرسل ملاحظاتك</h2>
-    <form id="feedback-form" action="https://formspree.io/f/xanqrwzy" method="POST">
-      <div class="input-group">
-        <input type="text" id="user-name" name="name" placeholder="اسمك" required>
-      </div>
-      <div class="input-group">
-        <input type="email" id="user-email" name="email" placeholder="البريد الإلكتروني" required>
-      </div>
-      <div class="input-group">
-        <textarea id="user-message" name="message" placeholder="ملاحظاتك..." required></textarea>
-      </div>
-      <button type="submit" class="submit-btn">إرسال</button>
-    </form>
   </section>
 
   <!-- Footer -->
