--- a/courses.html
+++ b/courses.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الكورسات</title>
+  <title>كورسات - شاهين</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="courses-container">
-    <h1>Soon</h1>
-    <p>سيتم إضافة الكورسات قريبًا!</p>
+    <h1>قريباً</h1>
+    <p>سيتم إضافة الكورسات قريباً!</p>
     <a href="index.html" class="back-btn">العودة إلى الصفحة الرئيسية</a>
   </div>
 </body>
