--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- قسم الهيدر -->
   <header id="home">
     <h1>مرحبا بكم في موقع شاهين</h1>
-    <p>وتعرف على كورسات ومحتوى جديد قريباً.</p>
+    <p>تعرف على كورسات ومحتوى جديد قريباً.</p>
   </header>
 
   <!-- قسم روابط التواصل الاجتماعي -->
